chore: add mapstruct dependency

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>QuestionnaireSystem</description>
     <properties>
         <java.version>21</java.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
     </properties>
     <dependencies>
         <dependency>
@@ -65,6 +66,12 @@
             <artifactId>hypersistence-utils-hibernate-62</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
