--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>21</java.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <maven-compile.version>3.11.0</maven-compile.version>
+        <log4j.vertion>2.22.1</log4j.vertion>
     </properties>
     <dependencies>
         <dependency>
@@ -72,6 +73,17 @@
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.vertion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.vertion}</version>
+        </dependency>
+
 
     </dependencies>
 
